javaDSL/src/test/resources/typeSystemTestModels/invalid/expressions/AdditiveOps.java
/* (c) https://github.com/MontiCore/monticore */

package typeSystemTestModels.invalid.expressions;

public class AdditiveOps {

  int n = true + 2;
  int m =  "haha" - false;
}
